2017.10/_sources/plugins/available/gneiss/balance-taxonomy.txt
balance-taxonomy: Balance Summary
=================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime gneiss balance-taxonomy [OPTIONS]

     Visualize the distribution of a single balance and summarize its numerator
     and denominator components.

   Options:
     --i-table PATH              Artifact: FeatureTable[Composition]  [required]
                                 A table of compositions.
     --i-tree PATH               Artifact: Hierarchy  [required]
                                 The tree used to
                                 calculate the balances.
     --i-taxonomy PATH           Artifact: FeatureData[Taxonomy]  [required]
                                 Taxonomy information for the OTUs.
     --p-balance-name TEXT       [required]
                                 Name of the balance to summarize.
     --p-taxa-level INTEGER      [default: 0]
                                 Level of taxonomy to summarize.
     --p-n-features INTEGER      [default: 10]
                                 The number of features to plot in
                                 the proportion plot.
     --p-threshold FLOAT         [optional]
                                 A threshold to designate discrete
                                 categories for numerical metadata.  This will
                                 split the numerical category into two
                                 categories, values below the threshold, and
                                 values above the threshold.If not specified,
                                 this threshold will default to the mean.
     --m-metadata-file PATH      Metadata file or artifact viewable as metadata.
                                 This option may be supplied multiple times to
                                 merge metadata  [optional]
     --m-metadata-category TEXT  Category from metadata file or artifact viewable
                                 as metadata  [optional]
                                 Metadata for plotting
                                 the balance (optional).
     --o-visualization PATH      Visualization [required if not passing --output-
                                 dir]
     --output-dir DIRECTORY      Output unspecified results to a directory
     --cmd-config PATH           Use config file for command options
     --verbose                   Display verbose output to stdout and/or stderr
                                 during execution of this action.  [default:
                                 False]
     --quiet                     Silence output if execution is successful
                                 (silence is golden).  [default: False]
     --help                      Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Balance Summary

   Visualize the distribution of a single balance and summarize its numerator
   and denominator components.

   Parameters
   ----------
   table : FeatureTable[Composition]
       A table of compositions.
   tree : Hierarchy
       The tree used to calculate the balances.
   taxonomy : FeatureData[Taxonomy]
       Taxonomy information for the OTUs.
   balance_name : Str
       Name of the balance to summarize.
   taxa_level : Int, optional
       Level of taxonomy to summarize.
   n_features : Int, optional
       The number of features to plot in the proportion plot.
   threshold : Float, optional
       A threshold to designate discrete categories for numerical metadata.
       This will split the numerical category into two categories, values
       below the threshold, and values above the threshold.If not specified,
       this threshold will default to the mean.
   metadata : MetadataCategory, optional
       Metadata for plotting the balance (optional).

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>